INCLUDE_DIRECTORIES(
                    "${CMAKE_CURRENT_SOURCE_DIR}"
                    "${CMAKE_CURRENT_SOURCE_DIR}/include"
                    "${CMAKE_BINARY_DIR}/src/include"
                    "${CMAKE_CURRENT_SOURCE_DIR}/src"
)

# dependencies
INCLUDE(CheckLibraryExists)
INCLUDE(CheckIncludeFile)
CHECK_INCLUDE_FILE(dirent.h HAVE_DIRENT_H ONLY_CMAKE_FIND_ROOT_PATH)
CHECK_INCLUDE_FILE(langinfo.h HAVE_LANGINFO_H ONLY_CMAKE_FIND_ROOT_PATH)
CHECK_INCLUDE_FILE(locale.h HAVE_LOCALE_H ONLY_CMAKE_FIND_ROOT_PATH)

CHECK_INCLUDE_FILE(libintl.h HAVE_LIBINTL_H ONLY_CMAKE_FIND_ROOT_PATH)
FIND_LIBRARY( LIBINTL_LIBRARIES NAMES intl libintl libintl-8 ONLY_CMAKE_FIND_ROOT_PATH )
IF(LIBINTL_LIBRARIES)
  SET( EXTRA_LIBS ${EXTRA_LIBS} ${LIBINTL_LIBRARIES} )
  SET( EXTRA_LIBS_CORE ${EXTRA_LIBS_CORE} ${LIBINTL_LIBRARIES} )
ELSE(LIBINTL_LIBRARIES)
  MESSAGE( "-- libintl not found" )
ENDIF(LIBINTL_LIBRARIES)

CHECK_LIBRARY_EXISTS(c malloc "stdio.h" HAVE_C ONLY_CMAKE_FIND_ROOT_PATH)
IF(HAVE_C)
  SET( EXTRA_LIBS ${EXTRA_LIBS} c )
ENDIF(HAVE_C)

FIND_PATH( STDINT_INCLUDE_DIR stdint.h
           HINTS /mingw ${INCLUDE_DIRECTORIES}
           PATH_SUFFIXES include
	   ONLY_CMAKE_FIND_ROOT_PATH)
IF(STDINT_INCLUDE_DIR)
  SET( HAVE_STDINT_H 1 )
  MESSAGE( "-- stdint.h: " ${STDINT_INCLUDE_DIR} )
ELSE(STDINT_INCLUDE_DIR)
  MESSAGE( "-- stdint.h not found" )
ENDIF(STDINT_INCLUDE_DIR)

FIND_PATH( INTTYPES_INCLUDE_DIR inttypes.h
           HINTS /mingw ${INCLUDE_DIRECTORIES}
           PATH_SUFFIXES include
	   ONLY_CMAKE_FIND_ROOT_PATH )
IF(INTTYPES_INCLUDE_DIR)
  SET( HAVE_INTTYPES_H 1 )
  MESSAGE( "-- inttypes.h: " ${INTTYPES_INCLUDE_DIR} )
ELSE(INTTYPES_INCLUDE_DIR)
  MESSAGE( "-- inttypes.h not found" )
ENDIF(INTTYPES_INCLUDE_DIR)

# debug
GET_PROPERTY(inc_dirs DIRECTORY PROPERTY INCLUDE_DIRECTORIES)
#MESSAGE( "-- INCLUDE_DIRECTORIES: ${inc_dirs}" )


SET (OPROJECT_NAME "XCM" )
SET( ${OPROJECT_NAME}_PACKAGE_MAJOR 0)
SET( ${OPROJECT_NAME}_PACKAGE_MINOR 5)
SET( ${OPROJECT_NAME}_PACKAGE_MICRO 4)
SET( PACKAGE_VERSION ${${OPROJECT_NAME}_PACKAGE_MAJOR}.${${OPROJECT_NAME}_PACKAGE_MINOR}.${${OPROJECT_NAME}_PACKAGE_MICRO} )

ADD_SUBDIRECTORY( src )

